# visual-clinic

./: .gitignore  CMakeLists.txt  README.md  index.ui  meansdialog.ui  relatedialog.ui  scatterdialog.ui
hw4/problem1/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
hw4/problem2/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
hw5/problem1/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
hw5/problem2/: CMakeLists.txt  README.md  datetimepicker.cpp  datetimepicker.h  datetimepicker.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
hw5/problem3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: FileTab.h  TableValidator.h  XMainWindow.h  attrdialog.h  avgdialog.h  index.h  meansdialog.h  pcadialog.h  relatedialog.h  scatterdialog.h
lib/: covariance.cpp  math_common.h  mean_shift.cpp  pca.cpp  rowfeature.cpp  spectral_cluster.cpp
qtplay/: CMakeLists.txt
resources/: resources.qrc
src/: FileTab.cpp  TableValidator.cpp  XGradientFrame.cpp  avgdialog.cpp  index.cpp  main.cpp  meansdialog.cpp  pcadialog.cpp  relatedialog.cpp  scatterdialog.cpp
visual-clinic/: .gitignore  CMakeLists.txt  attrdialog.ui  avgdialog.ui  index.ui  mainwindow.ui  meansdialog.ui  pcadialog.ui  relatedialog.ui  scatterdialog.ui
visual-clinic/include/: FileTab.h  XGradientFrame.h  XMainWindow.h  avgdialog.h  index.h  mainwindow.h  meansdialog.h  pcadialog.h  relatedialog.h  scatterdialog.h
visual-clinic/lib/: covariance.hpp  dbscan.cpp  kmeans.cpp  kmeans.hpp  leastsquare.cpp  math_common.h  pca.hpp  rowfeature.hpp
visual-clinic/resources/forms/: mainwindow.ui
visual-clinic/src/: FileTab.cpp  XGradientFrame.cpp  attrdialog.cpp  avgdialog.cpp  index.cpp  mainwindow.cpp  meansdialog.cpp  pcadialog.cpp  relatedialog.cpp  scatterdialog.cpp
